[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/spells/SpellDash.gd" type="Script" id=1]

[node name="SpellDash" type="Node2D"]
script = ExtResource( 1 )

[node name="DelayTimer" type="Timer" parent="."]
wait_time = 0.75

[node name="AnimationTimer" type="Timer" parent="."]
wait_time = 0.25
[connection signal="timeout" from="DelayTimer" to="." method="_on_DelayTimer_timeout"]
[connection signal="timeout" from="AnimationTimer" to="." method="_on_AnimationTimer_timeout"]
